<resources>
    <string name="app_name">Monopoly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="btnSearch">Search Games</string>
    <string name="btnSettings">Settings</string>
    <string name="btnChange">Change</string>
    <string name="hintPlayerName">Playername</string>
    <string name="MainScreen" translatable="false">1 - Main</string>
    <string name="SettingsScreen">3 - Settings</string>
    <string name="SearchScreen">2 - Search</string>
    <string name="btnHost">Host Game</string>
    <string name="HostScreen">4 - Host</string>
    <string name="GameScreen">6 - Game</string>
    <string name="LobbyScreen">5 - Lobby</string>
    <string name="btnStart">Start Game</string>
    <string name="btnHostNew">Host new game</string>
    <string name="yourDeeds">Your owned Deeds</string>
    <string name="buyDeed">You are about to buy %1$s for € %2$d</string>
    <string name="buyHouseOnDeed">You are about to buy a house on %1$s for € %2$d</string>
    <string name="buyDeedTitle">Buy Deed?</string>
    <string name="buyHouseTitle">Buy new House?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deedCertificate">Certificate</string>
    <string name="deedValue">Deed Value</string>
    <string name="deedRent">Rent of Street only</string>
    <string name="deedRent1House">with 1 House</string>
    <string name="deedRent2Houses">with 2 Houses</string>
    <string name="deedRent3Houses">with 3 Houses</string>
    <string name="deedRent4Houses">with 4 Houses</string>
    <string name="deedDoubleRent">If a player owns all Streets of a color, then the rent at all Streets which don\'t have a house placed on it is doubled.</string>
    <string name="deedHousePrice">1 House costs:</string>
    <string name="deedHotelPrice">1 Hotel costs:</string>
    <string name="deedMortgageValue">The Mortgage for this Street is</string>
    <string name="currencyNumber" translatable="false">€ %1$d</string>
    <string name="buyBtn">Buy</string>
    <string name="cancelBtn">Cancel</string>
    <string name="lobbyBackgroundDescription" translatable="false">The monopolyman as background</string>
    <string name="balance" translatable="false">Balance: $%1$d</string>

    <string-array name="gamePieceArray">
        <item>Boat</item>
        <item>Car</item>
        <item>Cat</item>
        <item>Dino</item>
        <item>Dog</item>
        <item>Duck</item>
        <item>Hat</item>
        <item>Penguin</item>
    </string-array>
    <string name="Train">Train</string>
    <string name="railroadRent">Rent</string>
    <string name="rentTwoRR">If you own 2 Railroads</string>
    <string name="rentThreeRR">If you own 3 Railroads</string>
    <string name="rentFourRR">If you own 4 Railroads</string>
    <string name="electricInfo">If you own the Electric Company, then the Rent is 4 times higher, than the dices eyes show.</string>
    <string name="waterInfo">If you own the Water Works, then the Rent is 4 times higher, than the dices eyes show.</string>
    <string name="bothUtilityInfos">If you own both works, then the Rent is 10 times higher, than the dices eyes show.</string>
    <string name="youPaidTo">You paid %1$d to %2$s.</string>
    <string name="buyHotelOnDeed">You are about to buy a hotel on %1$s for € %2$d</string>
    <string name="buyHotelHeader">Buy Hotel?</string>
    <string name="zeroHouses" translatable="false"> </string>

</resources>
