<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <ImageView
                android:alpha="1"
                android:id="@+id/lobby_background"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:scaleType="fitStart"
                android:src="@drawable/lobby_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                style="@style/Widget.AppCompat.Button"
                android:background="@drawable/monoploy_button"
                android:id="@+id/searchBtn"
                android:layout_height="wrap_content"
                android:layout_marginStart="113dp"
                android:layout_width="wrap_content"
                android:text="@string/btnSearch"
                app:layout_constraintBottom_toBottomOf="@+id/hostGameBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hostGameBtn" />

        <Button
                style="@style/Widget.AppCompat.Button"
                android:background="@drawable/monoploy_button"
                android:id="@+id/settingsBtn"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginStart="71dp"
                android:layout_width="wrap_content"
                android:text="@string/btnSettings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchBtn" />

        <TextView
                android:id="@+id/textView3"
                android:layout_height="wrap_content"
                android:layout_marginStart="298dp"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/MainScreen"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <Button
                style="@style/Widget.AppCompat.Button"
                android:background="@drawable/monoploy_button"
                android:id="@+id/hostGameBtn"
                android:layout_height="wrap_content"
                android:layout_marginBottom="74dp"
                android:layout_marginStart="33dp"
                android:layout_width="wrap_content"
                android:text="@string/btnHost"
                app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
                app:layout_constraintStart_toEndOf="@+id/settingsBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>